@@ -525,3 +525,4 @@ Revision	Log Message
 500		Merge main into mod
 501		Updated project file for VS12 compatibility
 502		Dynamically assigned graphical cultures for mod countries
+503		Code optimization. Minor bugfixes. Added some missing files in converter mod.
